@@ -2140,6 +2140,9 @@
 		<a href="#about-sliceheight">slice height (handle)</a><br>
 		
 	
+		<a href="#about-sliceindexamongsiblings">slice index among siblings (handle)</a><br>
+		
+	
 		<a href="#about-sliceiscontainer">slice is container (handle)</a><br>
 		
 	
@@ -7585,6 +7588,14 @@ end
 <li><a href="#about-firstchild" class="ref">first child</a></li>
 </ul>
 		</tt></p>
+		<a name="about-sliceindexamongsiblings"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">slice index among siblings (handle)</font></b><br>
+			Returns an integer that that indicates which number this slice is among its sibling slices that share the same parent. The first slice will return index 0, the second slice 1, the third slice 2, etc...<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-slicechild" class="ref">slice child</a></li></ul>
+		</tt></p>
 		<a name="about-slicetofront"></a>
 		<p>
 		<tt>
@@ -11948,7 +11959,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 809 commands in this file, of which 57 are only references to other commands.</p>
+	<p>Stats: There are 810 commands in this file, of which 57 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
