@@ -121,6 +121,8 @@ WHAT IS NEW?
       "auto virtual gamepad" [James]
     * "get horiz align", "get vert align", "get horiz anchor",
       "get vert anchor" [James]
+    * "create select" "slice is select" "set slice select index"
+      "get slice select index" "slice index among siblings" [James]
 
   * Performance Fixes
     * Fixed delay when opening a menu that happened when a large number
